# city-guide

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  PRD-1.0.md  README.md  alembic.ini  demo.py  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements-minimal.txt  requirements.txt  test_basic_integration.py  test_debug_conversation.py  test_simple_data.py
.files/0ba03b65-d7ab-4a78-834e-9ff824d40ef1/: 05bbafe7-7605-4b05-9b55-16a6a49cfade.txt  a85e7550-18af-411f-9e93-c9c0013475e8.txt  b5d4b0b5-f3b1-4e2e-8953-343b1128a100.txt  ce00d4ca-302c-48ae-87d4-d46e5c22688b.txt  e188bbdf-014d-41cd-be70-9a86ebb38be5.txt
.files/31e1274a-e6bc-47a8-b5ef-c75f319d189f/: 0752c335-d900-470a-9710-1aa7e8d537e4.txt  d51ee7eb-ef01-4515-9ac4-1003f4356a3f.txt
.files/5d09fb03-aeb5-42d7-828e-85e641343bed/: ec5686aa-c35e-4ba5-bc73-e8e7d306bd03.txt
.files/af45c7c5-e600-4b42-b773-39d05fe13dd9/: cb964dad-7243-429d-ab51-882de8eab7ca.txt
.files/b11f5770-08b6-4c53-9c90-dc654435d637/: 07d524d5-9615-46cb-aea4-f9625b495b9c.txt
.files/d6a27964-5088-4a3d-bd76-25a8386426c3/: ceca78f6-e9fd-42c7-bb0d-1438ed27e25d.txt
.files/dad87b43-99fd-4336-88ab-ea3ce25a29a8/: 2d288194-cda0-49e7-bbf5-0713e7eac588.txt
.files/ecec1507-232b-4fe8-840c-7f0a266b2950/: 52412212-658a-47ef-bec7-453de5c2f6c6.txt  6a039065-ab3c-415d-a442-28e261a29c84.txt
.files/f7fb5224-87fc-43ad-83a6-738cac416f36/: 10e50ce6-75d8-4f3b-a70a-895c11c6374d.txt  5670ab42-48c4-4c07-bc04-911812d2aa0c.txt  d286425a-841f-45f7-9332-dd4c4eab67b4.txt
.specify/memory/: constitution.md
docs-external/: bsyDetail-545339.md  bsyDetail-643315.md  bsyDetail-fq.md
migrations/: env.py
migrations/versions/: 0d4ae3668d01_add_service_relationship_tracking_.py  2ff8e51c0c13_initial_migration.py  3d4fae13765e_initial_migration.py  4bcacd6d5657_initial_migration.py  78b6df983ffe_update_datetime_handling_to_use_.py  9b1e5eb162a3_initial_migration.py
scripts/: check_vector_index.py  clear_vector_database.py  data_ingestion.py  debug_milvus_index.py  fix_navigation_direct.py  fix_navigation_option.py  force_recreate_index.py  generate_embeddings.py  init-db.sql  initialize_bm25_index.py  load_initial_data.py  setup_database.py  setup_vector_db.py  test_cosine_similarity.py  test_model_loading.py  update_timezones.py
specs/001-city-guide-assistant/: chainlit-research-v1.md  data-model.md  milvus-design-guide.md  milvus-implementation-guide.md  milvus-research.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-document-attribution/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/api/: conversation.py  documents.py  health.py  relevance.py
src/chainlit/: app.py
src/models/: attribution.py  conversation.py  conversation_model.py  document_embeddings.py  document_source.py  embeddings.py  search_queries.py  services.py
src/services/: ai_response_service.py  ai_service.py  attribution_service.py  bm25_service.py  conversation_service.py  data_service.py  document_service.py  embedding_service.py  mock_ai_service.py  navigation_generator.py  navigation_service.py  relevance_service.py  search_service.py  sentence_splitter_service.py  (+2 more)
(+45 files in other folders)
